Provide proof sketch before arguing formally

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -44,10 +44,15 @@ The notion of Chain Quality is decisive for the operation of NIPoPoWs under a ve
 
 \textbf{Theorem 4. (Security under velvet fork)} \textit{Assuming honest majority under velvet fork conditions such that $\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2}$, the non-interactive proofs-of-proof-of-work construction for computable $\kappa$-stable monotonic suffix-sensitive predicates under velvet fork conditions is secure with overwhelming probability in $\kappa$.}\\
 
+\textit{Proof.} By contradiction. We follow the proof construction of Theorem 2 and extend it. Let $Q$ be a $\kappa-$stable monotonic suffix-sensitive chain predicate. Assume NIPoPoWs under velvet fork on $Q$ is insecure. Then, during an execution at some round  $r_3$, $Q(C)$ is defined and the verifier $V$ disagrees with some honest participant. Assume the execution is typical. $V$ communicates with adversary $A$ and honest prover $B$. The verifier receives proofs $\pi_A, \pi_B$. Because $B$ is honest, $\pi_B$ is a proof constructed based on underlying blockchain $C_B$ (with $\pi_B \subseteq C_B$), which $B$ has adopted during round $r_3$ at which $\pi_B$ was generated. Consider $C_A$ the chain containing at least some of the blocks in $\pi_A$, while the remaining blocks $\pi_A$ must belong in $C_B$. 
 The verifier outputs $\neg Q(C_B)$. Thus it is necessary that $\pi_A \geq \pi_B$. We show that $\pi_A \geq \pi_B$ is a negligible event. 
 Let $b = LCA(\pi_A, \pi_B)$. Let the levels of comparison decided by the verifier be $\mu_A$ and $\mu_B$ respectively. Let $\mu'_B$ be the adequate level of proof $\pi_B$  with respect to block $b$. Call $\alpha_A = \pi_A \uparrow^{\mu_A}\{b:\}$, 
-$\alpha'_B = \pi_B \uparrow^{\mu'_B}\{b:\}$.\\
+$\alpha'_B = \pi_B \uparrow^{\mu'_B}\{b:\}$.
+
+%%%%%%%%   reconsider this paragraph
+Our proof construction is based on the following scheme: we show that the competing suffix proofs can be conceived as consisting of three distinct parts. Each part denotes a specific round set and is called after the number of blocks existing in $\pi_A$ for that round set. Part $k_1$ lies for the first part of the proofs between blocks $b = LCA(\pi_A, \pi_B)$ and $b_2 = LCA(C_A, C_B)$ meaning for the common 0-level part of $\alpha_A,  \alpha_B$. Part $k_2$ lies for the second part of the proofs considering the rounds from block $b_2 = LCA(C_A, C_B)$ up until the Common Prefix is established at the 0-level chains for that fork point. The third and last part, $k_3$ lies for the rest blocks in the proofs.\\
 The above are illustrated, among other, in Parts I, II of Figure \ref{fig:proof_velvet}.
+
 \begin{figure}[h!]
 	\begin{center}
 		\includegraphics[scale=0.5]{figures/proof_velvet.png}
@@ -55,15 +60,11 @@ The above are illustrated, among other, in Parts I, II of Figure \ref{fig:proof_
 	\caption{\textit{ Wavy lines imply one or more blocks. Dashed lines and arrows imply interlink pointers to superblocks. \textbf{I}: the three round sets in two competing proofs at different levels, \textbf{II}: the corresponding 0-level chains, \textbf{III}: blocks participating in chains $C_B$, $C_A$ as conceived by the verifier's perspective.}}
 	\label{fig:proof_velvet}
 \end{figure}
-We will now show three successive claims under velvet fork conditions: First, $\alpha_A \downarrow \uparrow^{\mu_A}$ and $\alpha'_B \downarrow$ are mostly disjoint. Second, $a_A$ contains mostly adversarially generated blocks. And third, the adversary is able to produce this $a_A$ with negligible probability. Note that the notation $\alpha_A \downarrow \uparrow^{\mu_A}$ denotes the blocks of $\alpha_A$ which belong in the 0-level chain $C_A$, thus are not sewed in the adversary's proof by $C_B$.\\
+
+We will now show three successive claims under velvet fork conditions: First, $\alpha_A \downarrow \uparrow^{\mu_A}$ and $\alpha'_B \downarrow$ are mostly disjoint. Second, $a_A$ contains mostly adversarially generated blocks. And third, the adversary is able to produce this $a_A$ with negligible probability.\\
 Let $\alpha_A = k_1 + k_2 + k_3$ and let $k_1, k_2, k_3$ be as defined in the following Claims.\\
-Let round $r_1$ be the round when block $b$ is generated and round $r_2$ when block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$ is generated.\\
-\textbf{Claim 1:} $\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow$ are mostly disjoint. Following the proof of Theorem 2 we conclude that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_{1} = 2^{\mu'_B - \mu_A}$. In order to see this under the velvet fork conditions consider the following two claims. First let block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$. This means that $b_2$ is the LCA block considering the adversary's proof and honest player's 0-level chain excluding any adversarially generated block included in $\alpha_A$ after the 0-level fork point.\\
-\textit{\underline{Claim 1a}:} If no adversarially generated block of chain $C_B$ with incorrect interlink is included in $\alpha_A$ until block $b_2$ then the claim's proof is the same to that of Theorem 2, thus we have $k_1 \leq 2^{\mu'_B - \mu_A}$.\\
-\textit{\underline{Claim 1b}:}  If a block $b' = \{b' \in C_B\{b:b_2\} \cap \textit{ } b' \textit{ contains incorrect interlink} \}$ is included in $\alpha_A$ then we have that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_1 = k_{1a} + k_{1b}$, where $ k_{1a} = 2^{\mu'_B - \mu_A}$. 
-	
-Note that after block $b'$ no more honestly generated blocks of the common subchain $C_B\{b':b_2\}$ are included in $\alpha_A$ because of Remark 2. Blocks in $\alpha_A\{b':b_2\}$ are all adversarially generated of $C_B$. Thus from that point on it is equivalent considering two disjoint chains, one with honestly and another with adversarially generated blocks, competing each other. Let these adversarially generated blocks count to $k_{1b}$,  where $k_{1b} \leq C_B\{b':b_2\}\uparrow^{\mu_A}$.\\ \textit{(In the end, consider the rounds when these blocks were generated and apply Lemma 1 to get a desirable inequality)}\\
-From all the above, we conclude that there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$ which are not honestly generated blocks existing in $\alpha_B\downarrow$. In other words, there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$, which are either adversarially generated existing in $\alpha_B\downarrow$ either don't belong in $\alpha_B\downarrow$. This makes $b_2$ the last block before the 0-level fork point included in the adversary's proof.\\
+Let round $r_1$ be the round when block $b$ is generated and round $r_2$ when block $b_2 = LCA(\alpha_A, \alpha'_B\downarrow)$ is generated.\\
+
 \textbf{Claim 2.} 
 At least $k_3$ superblocks of $\alpha_A$ are adversarially generated. Just as the proof of Theorem 2 and using a similar notation, because of the Common Prefix property on parameter $k_{2a\downarrow}$, $\alpha_A \downarrow \uparrow [k_{1a}+k_{2a}:]$ could contain no honestly generated blocks. In case there are no sewed blocks, the above holds for $\alpha_A$ too. In order to generalize to velvet fork conditions, let the sewed blocks count to $k_{2b}$ and the sum $k_2 = k_{2a} + k_{2b}$. We conclude that $\alpha_A [k_{1}+k_{2}:]$ could contain no honestly generated blocks. \\ 
 Note that for every sewed subchain the adversary includes in her proof, it may be that some other blocks generated in the adversary's chain are left out of the proof. This is due to the way blocks are generated in order to form a valid chain. So, in a case where a number of $C_B$ blocks are sewed in $C_A$ between blocks $b_{s_1}$ and $b_{s_2}$, say at rounds $s_1, s_2$ accordingly, any block generated in $C_A$ in the round set $s_1..s_2$ would be left out of the proof. This is illustrated in Figure \ref{fig:exclude}.\\
