--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -31,7 +31,7 @@
 
 
 \subsubsection{Security of Suffix Proofs}
-Our security proof is based on the security proof of NIPoPoWs Suffix Security Proof under a soft or hard fork. Consequently, most of the Definitions and Lemmas presented in Section \ref{proof_under_hard_fork} will be referenced and applied for the security proof under velvet fork conditions. Keep in mind that we operate under the condition of (1/3)-bounded adversary.
+Our security proof is based on the security proof of NIPoPoWs Suffix Security Proof under a soft or hard fork. Consequently, most of the Definitions and Lemmas presented in Section \ref{proof_under_hard_fork} will be referenced and applied for the security proof under velvet fork conditions. Keep in mind that we operate under the condition of (1/3)-bounded adversary.\\
 
 The notion of Chain Quality is decisive for the operation of NIPoPoWs under a velvet fork. Before stepping into the security proof we provide the formal definition of this notion and the basic Theorem where its basic metric is computed.\\
 
