Refinements in protocol update description

--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -6,7 +6,7 @@ These facts make it possible to provide a secure solution for the velvet fork co
 \subsubsection*{Impossibility of a secure protocol for (1/2)-bounded adversary}
 During our study on the problem we failed to prove the security of several protocol constructions under $(\frac{1}{2})$-bounded adversary. We finally concluded that such a secure NIPoPoWs construction is impossible under velvet fork conditions. Though it is hard to provide a typical proof for this claim, as one should consider any possible construction, in this section we will try to argue for it. 
 
-\textbf{Claim:} \textit{Assume $t$ adversarial out of total $n$ parties. There is no construction for NIPoPoWs suffix proofs under velvet fork conditions, which is secure for every adversary $t$, such that $\dfrac{t}{n-t} < \delta$.}
+\textbf{Claim:} \textit{Assume $t$ adversarial out of total $n$ parties. There is no construction for NIPoPoWs suffix proofs under velvet fork conditions, which is secure for every adversary, such that $\dfrac{t}{n-t} < \delta$.}
 
 \textit{Discussion.} As explained earlier, since the adversary may use the interlink structure so as to include pointers to arbitrary blocks,  she may construct her own chain history utilizing the false pointers included in the blocks she herself generates. Such an example is given in Figure \ref{fig:generic_attack}.
 
@@ -14,7 +14,7 @@ Let us consider a construction $p$ which allows for NIPoPoWs suffix proofs under
 
 
 
-Now assume an adversary of $ \frac{n}{3} < t < \frac{n}{2} $. Then, as explained in the Backbone and Selfish Mining papers \cite{Backbone}\cite{selfish_mining} it is possible for the adversary to maintain the longest valid chain of less than $50\%$ chain quality in favor of adversarially generated blocks. This is illustrated in Figure \ref{fig:selfish_mining_pie}. 
+Now assume an adversary of $ \frac{n}{3} < t < \frac{n}{2} $. Then, as explained in the Backbone and Selfish Mining papers \cite{Backbone}\cite{selfish_mining} it is possible for the adversary to maintain the longest valid chain being of less than $50\%$ chain quality in favor of adversarially generated blocks. This is illustrated in Figure \ref{fig:selfish_mining_pie}. 
 
 \begin{figure}[h!]
 	\begin{center}
@@ -24,20 +24,20 @@ Now assume an adversary of $ \frac{n}{3} < t < \frac{n}{2} $. Then, as explained
 	\label{fig:selfish_mining_pie}
 \end{figure}
 
-Observe that the property that is violated in the described attack is the $prevId$ relation between sequential blocks. However since the main purpose of our work is to achieve succinctness, the \textit{prevId} relations could not be utilized in a viable manner in order to contest adversarial proofs, as it would require proofs of length linear to that of the whole chain.  We thus consider that we should mostly rely on the information given by the interlink data structure as far as the validity of any proof is concerned so as to keep our protocol construction efficient.
+Observe that the property violated in the described attack is the $prevId$ relation between sequential blocks. However since the main purpose of our work is to achieve succinctness, the \textit{prevId} relations could not be utilized in a viable manner in order to contest adversarial proofs, as it would require proofs of linear length to that of the whole chain.  We thus conclude that we should mostly rely on the information given by the interlink data structure as far as the validity of any proof is concerned so as to keep our protocol construction efficient.
 
 Now assume, to honest parties' favor, that it is both possible and efficient to inspect the whole chain history that each block is commited to via its interlink pointers. Keep in mind that an adversary can keep a consistent chain considering the interlink pointers by using only her own mined blocks and, at the same time, these blocks may overwhelm the honestly generated ones. In our protocol $p$ it should be decided  under what policy an honest party generates blocks and constructs suffix proofs. A decision should be made for block generation:
 \begin{enumerate}
-\item interlink data are neutral as for adversarially and honestly generated blocks or 
+\item interlink data are neutral as for adversarially and honestly generated blocks
 \item interlink data point out inconsistent blocks, meaning blocks with incorrect interlinks
 \item interlink data exclude inconsistent blocks from being part of the valid chain formed by the super-pointers
 \end{enumerate}
 Now let's examine the above choices. \\
-In the first case the arguments that an honest player could provide against an inconsistent proof could only be based on the 0-level pointers. Such a contesting proof should at least provide the 0-level subchain of length equal to the following: starting from a block included in the suffix proof but is not a block of the chain until the closest block included in the suffix proof and is a valid block of the chain. This means that contesting proofs are expected to be of length $2^\mu$ where $\mu = log(|C|)$, and subsequently are of complexity $\mathcal{O}(|C|)$ which ruins the succinctness of our protocol.
+In the first case the arguments that an honest player could provide against an inconsistent proof could only be based on the 0-level pointers. Such a contesting proof should at least provide the 0-level subchain of length equal to the following: starting from a block included in the suffix proof and is not a block of the chain until the closest block included in the suffix proof and is a valid block of the chain. This means that contesting proofs are expected to be of length $2^\mu$ where $\mu = log(|C|)$, and subsequently are of complexity $\mathcal{O}(|C|)$ which ruins the succinctness of our protocol.
 
-In the second case an honest party could utilize this extra information provided in the interlink to prove an inconsistent proof wrong. However, keep in mind that the adversary could make such claims too. So, a claim of inconsistency for a specific block included should be followed by a proof of its inconsistency. Whatever the information considering the incorrect blocks in the interlink may be, the adversary could make some of it in her own generated blocks in order to contest an honest proof too. So we fall to the previous case turning to the 0-level in order to proof the true chain history, where the contesting proofs are unacceptable efficiency-wise.
+In the second case an honest party could utilize this extra information provided in the interlink to prove an inconsistent proof wrong. However, keep in mind that the adversary could make such claims too. So, a claim of inconsistency for a specific block included should be followed by a proof of its inconsistency. Whatever the information considering the incorrect blocks in the interlink may be, the adversary could make some of it in her own generated blocks in order to contest an honest proof too. So we fall to the previous case turning to \textit{prevId} pointers in order to prove the true chain history, where the contesting proofs are unacceptable efficiency-wise.
 
-In the third case we demand from the honest players to validate the interlink structures of the blocks in the chain and exclude the inconsistent ones from the chain history that the interlinks provide. In this way we could possibly provide contesting proofs using information only from the interlinks thus keeping our proofs succinct. This solution would result to two different chain histories considering the interlink pointers: the one of the honest parties that includes only blocks with valid interlinks, and the one of the adversary which may form her own history of invalid blocks but could not include honest blocks if at least one invalid block participates. This solution seems to bring us to a notable trade-off point. On the one hand we manage to uncouple from the 0-level blocks. On the other hand, we compromise that honest players cannot use valid adversarially generated blocks in their proof, while the adversary cannot include honestly generated blocks in her proofs if inconsistent blocks are also included. This solution could not work properly for $(\frac{1}{2})$-bounded adversary though. The reason lies in the bad chain quality as pointed out earlier and shown in Figure \ref{fig:selfish_mining_pie}. If the adversary  could create his own chain history including inconsistent blocks from two different chains, then she could easily construct a suffix proof that wins over an honest one because the majority of the blocks included in the chain could be adversarial with high probability. 
+In the third case we demand from the honest players to validate the interlink structures of the blocks in the chain and exclude the inconsistent ones from the chain history that the interlinks provide. In this way we could possibly provide contesting proofs using information only from the interlinks thus keeping our proofs succinct. This solution would result to two different chain histories considering the interlink pointers: the one of the honest parties that includes only blocks with valid interlinks, and the one of the adversary which may form her own history of invalid blocks probably belonging to many different underlying chains but could not include honest blocks if at least one invalid block participates in the proof. This solution seems to bring us to a notable trade-off point. On the one hand we manage to uncouple from the 0-level blocks. On the other hand, we compromise that honest players cannot use valid adversarially generated blocks in their proof, while the adversary cannot include honestly generated blocks in her proofs if inconsistent blocks are also included. This solution could not work properly for $(\frac{1}{2})$-bounded adversary though. The reason lies in the bad chain quality as pointed out earlier and shown in Figure \ref{fig:selfish_mining_pie}. If the adversary  could create his own chain history including inconsistent blocks from two different chains, then she could easily construct a suffix proof that wins over an honest one because the majority of the blocks included in the chain could be adversarial with high probability. 
 
 We conclude that such a protocol could not exist for $(\frac{1}{2})$-bounded adversary.
 
@@ -61,7 +61,8 @@ The protocol patch we suggest can be summarized as follows:\\
 \textbf{Protocol Patch for NIPoPows under velvet fork.} In order to make NIPoPoWs safe under velvet fork conditions we suggest:
 \begin{enumerate}
 \item Strengthen the Honest Majority Assumption so that $\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2} \cdot (n-t)$
-\item The NIPoPoW protocol under velvet fork works as usual but each miner constructs a block's interlink without considering the blocks with false interlink except for pointers of level $\mu = 0$.
+%%% TODO: also provide short algorithm for the intrlink construction after the patch  
+\item The NIPoPoW protocol under velvet fork works as usual but a miner constructs a block's interlink without considering the blocks with false interlink except for pointers of level $\mu = 0$.
 \end{enumerate}
 
 The following two Lemmas come as immediate results from the suggested protocol update.\\
